fixing IE feed_items overflow issue

--- a/public/stylesheets/winnow.css
+++ b/public/stylesheets/winnow.css
@@ -198,6 +198,7 @@ optgroup {
 #content {
   overflow: auto;
   padding: 10px;
+	position: relative;
 }
 
 #feed_items_controller #content {
